Fix for overflowing dashboard columns in Safari.
There is a bug in Safari's flex implementation which means that when the grid is resized, the new width constraints don't get applied to the children of the grid automatically. Specifying a 100% width fixes this.

--- a/src/styles/layout/panel.less
+++ b/src/styles/layout/panel.less
@@ -46,6 +46,8 @@
     .panel-content {
       height: (@base-spacing-unit * 14) - @heading-h4-text-font-size;
     }
+    // Fixes a Safari flex issue where panels overflow the column on resize
+    width: 100%;
   }
 }
 
